@@ -1,0 +1,4 @@
+if mods["SchallCircuitGroup"] then
+  data.raw.item["power-combinator"].subgroup = "circuit-input"
+  data.raw.item["power-combinator-MK2"].subgroup = "circuit-input"
+end
